setup Postgres DB with docker, error handlers and PropertyRepository